recursion.lessons.recursion.koch.Koch.scala.error
Koch:44: error: expected start of definition
	override def run() {
                 ^Koch:47: error: Unmatched closing brace '}' ignored here
}
^